fix(frontend): add words wrap ss-634

--- a/apps/frontend/src/pages/points-of-interest-details/styles.module.css
+++ b/apps/frontend/src/pages/points-of-interest-details/styles.module.css
@@ -27,6 +27,8 @@
 	font-size: var(--font-size-h1);
 	font-weight: var(--font-weight-semibold);
 	line-height: 1.2;
+	word-break: break-all;
+	overflow-wrap: break-word;
 }
 
 .description {
@@ -67,7 +69,7 @@
 	}
 }
 
-@media (width <= 480px) {
+@media (width <=480px) {
 	.container {
 		padding: 24px;
 	}
